# flask-web-project

./: pyproject.toml
flask_web_project/: app.py
